--- a/dab/.env
+++ b/dab/.env
@@ -1,1 +1,3 @@
 CONN_STRING=Server=localhost;Database=library;User ID=SA;Password=P@ssw0rd!;TrustServerCertificate=true
+ASPNETCORE_URLS="http://localhost:5000;https://localhost:5001"
+DAB_ENVIRONMENT=Development
